--- a/client/src/style.css
+++ b/client/src/style.css
@@ -3,11 +3,12 @@
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-body, #root .App {
+body, #root, .App {
+	position: absolute;
   margin: 0px;
   padding: 0px;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .Login {
